# bone_challenge

./: AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENCE  README.MD  requirements.txt
approaches/bytemeifyoucan/: .gitignore  README.md  predict.py  pyproject.toml  train.py
approaches/bytemeifyoucan/.devcontainer/: Dockerfile  devcontainer.json
approaches/bytemeifyoucan/gpi_inferer/: __init__.py  config.py  math.py  plotting.py  predictor.py  trainer.py  transforms.py
approaches/code-warriors2/: README.md  annotations.py  niifiles_utils.py  predict.py  preprocess.py  train.py
approaches/code-warriors2/data_utils/: dataset.py  example_config.json  make_config.py
approaches/code-warriors2/training/: tensorboard_utils.py  training_utils.py  validation_metrics.py
approaches/explodingkittens/: README.md  predict.py  requirements.txt  train.py
approaches/explodingkittens/notebooks/: 01_Image_Processing.ipynb  02_Model_Training.ipynb  03_Model_Inference.ipynb
approaches/explodingkittens/src/: dataset.py  inference.py  model.py  preprocess.py  utils.py
approaches/matterhorn/: README.md  datasets.py  evaluate.py  helpers.py  join.py  models.py  predict.py  requirements.txt  results.csv  sizes.csv  sizes.py  stats.csv  test.py  train.py  transforms.py  y_true.csv  y_true_test.csv  y_true_test_only_preds.csv
approaches/matterhorn/results/: 0.csv  1.csv  2.csv  3.csv  4.csv
approaches/safetynnet/: README.md  environment.yml
approaches/safetynnet/src/: utils.py  (+2 more)
approaches/subvisible/: README.md  models.py  requirements.txt
data/: data.md
models/: models.md
(+34 files in other folders)
