[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpi-inferer"
description = "Bone challenge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nibabel>=5.2.1",
    "matplotlib>=3.8.3",
    "monai>=1.3.2",
    "numpy>=1.24.4",
    "pandas>=1.5.3",
    "scipy>=1.12.0",
    "tensorboard>=2.17.0",
    "torch>=2.2.0",
    "tqdm>=4.66.2",
    "zarr>=2.18.2",
]
dynamic = ["version"]

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.version]
path = "VERSION"
pattern = "^(?P<version>.*)$"

[tool.hatch.envs.check]
dependencies = [
    "mypy~=1.11.0",
    "pandas-stubs",
    "ruff~=0.5.0",
    "types-tqdm",
]

[tool.hatch.envs.check.scripts]
run = [
    "ruff format --check *.py gpi_inferer",
    "ruff check *.py gpi_inferer",
    "mypy *.py gpi_inferer",
]
format = [
    "ruff format *.py gpi_inferer",
    "ruff check --fix *.py gpi_inferer",
]

[tool.mypy]
check_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "nibabel.*",
    "scipy.*",
    "tensorboard.*",
    "zarr.*",
]

[tool.ruff]
target-version = "py310"
preview = true
lint.select = [
    "E",
    "F",
    "I",
    "RUF022",
    "UP",
    "W",
]
